# CMakeLists.txt for project THEMIS

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_VERBOSE_MAKEFILE 1)
PROJECT(themis CXX)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)


ADD_LIBRARY(themis INTERFACE)

#TARGET_INCLUDE_DIRECTORIES(themis INTERFACE
# #$<BUILD INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
# $<INSTALL_INTERFACE:include>
#)

SET(THEMIS_HEADERS
  exception.h
  inttype.h
  noncopyable.h
)


INSTALL(TARGETS themis
  EXPORT themis-export
#  ARCHIVE DESTINATION lib
  INCLUDES DESTINATION include
#  PUBLIC_HEADER DESTINATION include/themis
)

INSTALL(EXPORT themis-export
  FILE themis-config.cmake
  DESTINATION share/cmake/themis/
#  EXPORT_LINK_INTERFACE_LIBRARIES
)

INSTALL(FILES
    ${THEMIS_HEADERS}
  DESTINATION
    include/themis
)


#eof
