# Makefile.am for THEMIS

AM_CFLAGS = -O2
AM_CXXFLAGS = -O2

lib_LIBRARIES = libthemis.a

libthemis_a_SOURCES = \
	except.h \
	inttype.h \
	manage.h \
	listen.h \
	strconv.h strconv.cpp strconv_tolower.cpp wstrconv_tolower.cpp



themisincludedir = @includedir@/themis
themisinclude_HEADERS = \
	except.h \
	inttype.h \
	manage.h \
	listen.h \
	strconv.h

CLEANFILES = *~

#eof
